--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
   box-sizing: border-box;
 }
 body {
-  background-color: #c740b4;
+  background-color: #b88d95;
   font-family: "Nanum Gothic", sans-serif;
 }
 header {
@@ -20,7 +20,7 @@ h1 {
   font-size: 21px;
   text-align: center;
   color: #fff;
-  border-bottom: 1px solid #00007a;
+  border-bottom: 1px solid #ff0049;
   padding-bottom: 5px;
 }
 p {
@@ -42,12 +42,12 @@ form {
   background-color: transparent;
   outline: 0;
   border: 0;
-  border: 1px solid #00007a;
+  border: 1px solid #ff0049;
   border-radius: 5px;
   padding: 3px 7px;
 }
 fieldset {
-  border: 2px solid #00007a;
+  border: 2px solid #ff0049;
   margin: 10px 0;
   padding: 10px;
   display: flex;
