--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Kalam:wght@300;400&display=swap");
 
 * {
   margin: 0;
@@ -6,7 +7,7 @@
   box-sizing: border-box;
 }
 body {
-  background-color: #b88d95;
+  background-color: #b69fa3;
   font-family: "Nanum Gothic", sans-serif;
 }
 header {
@@ -17,7 +18,7 @@ header {
   padding: 20px;
 }
 h1 {
-  font-size: 21px;
+  font-size: 20px;
   text-align: center;
   color: #fff;
   border-bottom: 1px solid #ff0049;
@@ -29,7 +30,7 @@ p {
 h2 {
   text-align: start;
   font-size: 16px;
-  margin: 10px 0;
+  margin: 30px 0 10px 0;
 }
 img {
   border-radius: 50%;
@@ -39,20 +40,24 @@ form {
   padding: 20px 10px;
 }
 #name {
-  background-color: transparent;
+  background-color: #fff;
   outline: 0;
   border: 0;
-  border: 1px solid #ff0049;
   border-radius: 5px;
   padding: 3px 7px;
+  margin-left: 5px;
 }
 fieldset {
-  border: 2px solid #ff0049;
+  border: 2px solid #ffc13c;
   margin: 10px 0;
   padding: 10px;
   display: flex;
   flex-direction: column;
   font-size: 18px;
+}
+legend {
+  font-family: "Kalam", cursive;
+  font-size: medium;
 }
 .div {
   display: flex;
@@ -66,12 +71,12 @@ label {
 }
 input {
   margin-right: 10px;
-  background-color: #00007a;
+  background-color: #ffc13c;
 }
 .enviar {
   width: 100%;
   padding: 7px 10px;
-  background-color: #00007a;
+  background-color: #ffc13c;
   color: #fff;
   outline: 0;
   border: 0;
@@ -80,10 +85,10 @@ input {
 }
 footer {
   text-align: center;
-  border-top: 1px solid #00007a;
+  border-top: 1px solid #ffc13c;
   font-size: 14px;
   padding: 10px;
-  width: 60%;
+  width: 70%;
   margin: auto;
   margin-top: 20px;
 }
