--- a/style.css
+++ b/style.css
@@ -15,12 +15,16 @@ header {
   background-image: url("bg1.jpeg");
   background-position: center;
   background-size: cover;
-  padding: 20px;
+  padding: 20px 20px 0 20px;
+}
+header p {
+  font-size: medium;
+  font-weight: 700;
 }
 h1 {
   font-size: 20px;
   text-align: center;
-  color: #fff;
+  color: #000;
   border-bottom: 1px solid #ff0049;
   padding-bottom: 5px;
 }
@@ -29,8 +33,13 @@ p {
 }
 h2 {
   text-align: start;
-  font-size: 16px;
+  font-size: 18px;
   margin: 30px 0 10px 0;
+}
+.img {
+  display: flex;
+  align-items: flex-start;
+  margin-left: -20px;
 }
 img {
   border-radius: 50%;
@@ -48,7 +57,7 @@ form {
   margin-left: 5px;
 }
 fieldset {
-  border: 2px solid #ffc13c;
+  border: 2px solid #f9043f;
   margin: 10px 0;
   padding: 10px;
   display: flex;
@@ -63,6 +72,12 @@ legend {
   display: flex;
   justify-content: flex-start;
 }
+.input1 {
+  margin-left: 5px;
+}
+.input2 {
+  margin-left: 18px;
+}
 label {
   margin-bottom: 10px;
   margin-right: 20px;
@@ -71,12 +86,15 @@ label {
 }
 input {
   margin-right: 10px;
-  background-color: #ffc13c;
+  background-color: #f9043f;
+}
+p {
+  line-height: 25px;
 }
 .enviar {
   width: 100%;
   padding: 7px 10px;
-  background-color: #ffc13c;
+  background-color: #f9043f;
   color: #fff;
   outline: 0;
   border: 0;
@@ -85,7 +103,7 @@ input {
 }
 footer {
   text-align: center;
-  border-top: 1px solid #ffc13c;
+  border-top: 1px solid #f9043f;
   font-size: 14px;
   padding: 10px;
   width: 70%;
