--- a/style.css
+++ b/style.css
@@ -18,15 +18,16 @@ header {
   padding: 20px 20px 0 20px;
 }
 header p {
-  font-size: medium;
-  font-weight: 700;
+  font-weight: 600;
+  font-family: sans-serif;
 }
 h1 {
-  font-size: 20px;
+  font-size: 19px;
   text-align: center;
   color: #000;
   border-bottom: 1px solid #ff0049;
   padding-bottom: 5px;
+  font-family: sans-serif;
 }
 p {
   margin: 10px 0;
@@ -62,7 +63,7 @@ fieldset {
   padding: 10px;
   display: flex;
   flex-direction: column;
-  font-size: 18px;
+  font-size: 17px;
 }
 legend {
   font-family: "Kalam", cursive;
