--- a/style.css
+++ b/style.css
@@ -41,12 +41,14 @@ h2 {
 }
 .img {
   display: flex;
-  align-items: flex-start;
-  margin-left: -20px;
+  align-items: center;
+  justify-content: center;
+  width: 40%;
+  margin-left: 0px;
 }
 img {
   border-radius: 50%;
-  width: 100px;
+  width: 200px;
 }
 form {
   padding: 20px 10px;
@@ -62,7 +64,7 @@ form {
   margin-left: 5px;
 }
 fieldset {
-  border: 2px solid #f9043f;
+  border: 2px solid #8b0021;
   margin: 10px 0;
   padding: 10px;
   display: flex;
@@ -91,7 +93,7 @@ label {
 }
 input {
   margin-right: 10px;
-  background-color: #f9043f;
+  background-color: #8b0021;
 }
 p {
   line-height: 25px;
@@ -99,7 +101,7 @@ p {
 .enviar {
   width: 100%;
   padding: 7px 10px;
-  background-color: #f9043f;
+  background-color: #8b0021;
   color: #fff;
   outline: 0;
   border: 0;
@@ -108,7 +110,7 @@ p {
 }
 footer {
   text-align: center;
-  border-top: 1px solid #f9043f;
+  border-top: 1px solid #8b0021;
   font-size: 14px;
   padding: 10px;
   width: 70%;
@@ -121,5 +123,14 @@ footer {
   }
   header p {
     font-size: 14px;
+  }
+  .img {
+    display: flex;
+    align-items: flex-start;
+    margin-left: -15px;
+  }
+  img {
+    border-radius: 50%;
+    width: 100px;
   }
 }
