--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ h2 {
   text-align: start;
   font-size: 18px;
   margin: 30px 0 10px 0;
+  color: #8b0021;
 }
 .img {
   display: flex;
@@ -64,6 +65,10 @@ form {
   padding: 3px 7px;
   margin: 10px 0;
   margin-left: 5px;
+  height: 30px;
+}
+.name {
+  font-size: 16px;
 }
 fieldset {
   border: 2px solid #8b0021;
