--- a/style.css
+++ b/style.css
@@ -12,8 +12,7 @@ body {
 }
 header {
   text-align: center;
-  background-image: url("bg1.jpeg"),
-    linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.4));
+  background-image: url("bg1.jpeg");
   background-position: center;
   background-size: cover;
   padding: 20px 20px 0 20px;
@@ -37,7 +36,7 @@ p {
 }
 h2 {
   text-align: start;
-  font-size: 18px;
+  font-size: 22px;
   margin: 30px 0 10px 0;
   color: #8b0021;
 }
@@ -50,7 +49,7 @@ h2 {
 }
 img {
   border-radius: 50% 50% 0 0;
-  width: 200px;
+  width: 300px;
 }
 .logo {
   width: 100%;
@@ -71,7 +70,7 @@ form {
   height: 30px;
 }
 .name {
-  font-size: 16px;
+  font-size: 20px;
 }
 fieldset {
   border: 2px solid #8b0021;
@@ -80,11 +79,11 @@ fieldset {
   padding: 10px;
   display: flex;
   flex-direction: column;
-  font-size: 17px;
+  font-size: 22px;
 }
 legend {
   font-family: "Kalam", cursive;
-  font-size: medium;
+  font-size: 22px;
 }
 .div {
   display: flex;
@@ -116,7 +115,7 @@ p {
   color: #fff;
   outline: 0;
   border: 0;
-  font-size: 16px;
+  font-size: 20px;
   cursor: pointer;
 }
 footer {
@@ -135,6 +134,12 @@ footer {
   header p {
     font-size: 14px;
   }
+  h2 {
+    font-size: 18px;
+  }
+  .name {
+    font-size: 16px;
+  }
   .img {
     display: flex;
     align-items: flex-start;
@@ -142,5 +147,20 @@ footer {
   }
   img {
     width: 100px;
+  }
+  fieldset {
+    margin: 10px 0;
+    margin-bottom: 30px;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    font-size: 17px;
+  }
+  legend {
+    font-family: "Kalam", cursive;
+    font-size: medium;
+  }
+  .enviar {
+    font-size: 16px;
   }
 }
