--- a/style.css
+++ b/style.css
@@ -21,28 +21,17 @@ header p {
   font-weight: 600;
   font-family: sans-serif;
 }
-h1 {
-  font-size: 2em;
-  text-align: center;
-  color: #000;
-  border-bottom: 1px solid #ff0049;
-  padding-bottom: 5px;
-  font-family: sans-serif;
-  max-width: 790px;
-  margin: auto;
-}
 p {
   margin: 10px 0;
 }
 h2 {
   text-align: start;
-  font-size: 22px;
+  font-size: 30px;
   margin: 30px 0 10px 0;
   color: #8b0021;
 }
 .img {
   display: flex;
-  align-items: center;
   justify-content: center;
   width: 40%;
   margin-left: 0px;
@@ -59,19 +48,21 @@ form {
   max-width: 790px;
   margin: auto;
 }
+.name {
+  font-size: 20px;
+}
 #name {
   background-color: #fff;
   outline: 0;
   border: 0;
-  border-radius: 5px;
   padding: 3px 7px;
   margin: 10px 0;
   margin-left: 5px;
-  height: 30px;
+  height: 40px;
+  width: 100%;
+  font-size: 18px;
 }
-.name {
-  font-size: 20px;
-}
+
 fieldset {
   border: 2px solid #8b0021;
   margin: 10px 0;
@@ -127,6 +118,10 @@ footer {
   margin: auto;
   margin-top: 20px;
 }
+footer a {
+  font-weight: 700;
+  text-decoration: none;
+}
 @media (max-width: 450px) {
   h1 {
     font-size: 19px;
@@ -135,7 +130,7 @@ footer {
     font-size: 14px;
   }
   h2 {
-    font-size: 18px;
+    font-size: 20px;
   }
   .name {
     font-size: 16px;
@@ -147,6 +142,11 @@ footer {
   }
   img {
     width: 100px;
+  }
+  #name {
+    height: 30px;
+    width: 100%;
+    font-size: 16px;
   }
   fieldset {
     margin: 10px 0;
