--- a/style.css
+++ b/style.css
@@ -68,6 +68,7 @@ fieldset {
   display: flex;
   flex-direction: column;
   font-size: 22px;
+  border-radius: 10px;
 }
 .primavera {
   background-image: url("primavera.png");
